@@ -1249,6 +1249,15 @@ $result = $dbi->select(
 $row = $result->fetch_hash_all;
 is_deeply($row, [{key1 => 1, key2 => 2}], 'not_exists');
 
+$where = $dbi->where
+             ->clause(['and', 'key1 is not null', 'key2 is not null' ]);
+$result = $dbi->select(
+    table => 'table1',
+    where => $where,
+);
+$row = $result->fetch_hash_all;
+is_deeply($row, [{key1 => 1, key2 => 2}, {key1 => 3, key2 => 4}], 'not_exists');
+
 test 'dbi_option default';
 $dbi = DBIx::Custom->new;
 is_deeply($dbi->dbi_option, {});
